# ftlk-stuff

Phase6-fltk1/: Makefile.in  autogen.sh  configure.ac
Phase6-fltk1/autom4te.cache/: output.0  requests  traces.0
Phase6-fltk1/src/: flPhase6.cxx  flPhase6.h
Phase6-fltk1/src/Fl_Native_File_Chooser/: CREDITS  Fl_Native_File_Chooser_FLTK.cxx  Fl_Native_File_Chooser_WIN32.cxx  Makefile  common.cxx
Phase6-fltk1/src/fltk118-utf8-2007-07-14/: CAUTIONS  Makefile  README.fltk118-utf  config.h  config.status  configure  configure.in  fltk-utf8-config  fltk-utf8-config.in  fltk-utf8.list  makeinclude  makeinclude.in  nr2
Phase6-fltk1/src/fltk118-utf8-2007-07-14/FL/: Enumerations.H  Fl.H  Fl_Group.H  Fl_Help_View.H  Fl_Input_Choice.H  Fl_Widget.H  Fl_Window.H  forms.H  glut.H  x.H
Phase6-fltk1/src/fltk118-utf8-2007-07-14/autom4te.cache/: output.0  traces.0
Phase6-fltk1/src/fltk118-utf8-2007-07-14/documentation/: blocks.6  fluid.0  sudoku.0
Phase6-fltk1/src/fltk118-utf8-2007-07-14/fluid/: Fl_Function_Type.cxx  Fl_Type.cxx  Fl_Type.h  Fl_Widget_Type.cxx  Fl_Window_Type.cxx  about_panel.cxx  alignment_panel.cxx  code.cxx  function_panel.cxx  function_panel.fl  function_panel.h  makedepend  print_panel.cxx  template_panel.cxx  widget_panel.cxx  widget_panel.fl  widget_panel.h
Phase6-fltk1/src/fltk118-utf8-2007-07-14/fluid/fluid.app/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/fluid/fluid.app/Contents/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/fluid/fluid.app/Contents/Resources/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/fluid/icons/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/fluid/pixmaps/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/src/: Fl.cxx  Fl_Browser.cxx  Fl_Browser_.cxx  Fl_Chart.cxx  Fl_Check_Browser.cxx  Fl_Font.H  Fl_Gl_Window.cxx  Fl_Group.cxx  Fl_Help_View.cxx  Fl_Image.cxx  Fl_Input_.cxx  Fl_PNM_Image.cxx  Fl_Pack.cxx  Fl_Preferences.cxx  Fl_Text_Buffer.cxx  Fl_Text_Display.cxx  Fl_get_system_colors.cxx  Fl_lock.cxx  Fl_mac.cxx  Fl_win32.cxx  Fl_x.cxx  Makefile  filename_isdir.cxx  fl_ask.cxx  fl_call_main.c  fl_font.cxx  fl_font_xft.cxx  fl_set_fonts_x.cxx  fl_set_fonts_xft.cxx  fl_shortcut.cxx  gl_draw.cxx  scandir_win32.c
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/: Makefile  blocks.cxx  demo.menu  fonts.cxx  hello.cxx  input_choice.cxx  utf8.cxx
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/blocks.app/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/blocks.app/Contents/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/blocks.app/Contents/Resources/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/checkers.app/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/checkers.app/Contents/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/checkers.app/Contents/Resources/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/desktop/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/pixmaps/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/sudoku.app/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/sudoku.app/Contents/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/test/sudoku.app/Contents/Resources/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/xutf8/: Makefile  keysym2Ucs.c  utf8Input.c  utf8Utils.c  utf8Wrap.c
Phase6-fltk1/src/fltk118-utf8-2007-07-14/xutf8/headers/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/xutf8/lcUniConv/.svn/: entries
Phase6-fltk1/src/fltk118-utf8-2007-07-14/xutf8/utils/.svn/: entries
Phase6-fltk1/src/libphase6/: libphase6.cpp  libphase6.h  libxml.cpp  libxml.h
Phase6-fltk1/test-data/: englisch.6db  phase6.fd  t2.6db  test3.6db
flPear/: Makefile  flPear.cxx  flPear.fld  flPear.h
flbundle/: Makefile  Readme  flbundle.cxx
fldesktop/: Makefile  fldesktop.cxx  (+1 more)
flphoto_mod1/: ANNOUNCEMENT  CHANGES  Compositor.cxx  Compositor.h  Dependencies  Fl_AVI_Image.H  Fl_AVI_Image.cxx  Fl_CRW_Image.H  Fl_CRW_Image.cxx  Fl_EXIF_Data.H  Fl_EXIF_Data.cxx  Fl_Image_Browser.H  Fl_Image_Browser.cxx  Fl_Image_Display.H  Fl_Image_Display.cxx  Fl_PCD_Image.H  Fl_PCD_Image.cxx  Fl_Print_Dialog.H  Fl_Print_Dialog.cxx  Fl_Print_Dialog.fl  Fl_Print_Dialog2.cxx  Fl_Slideshow.cxx  Fl_Slideshow.h  INSTALL  Makefile.in  MenuTabs.cxx  MenuTabs.h  README  SmartGroup.cxx  SmartGroup.h  SpringWindow.cxx  SpringWindow.h  TODO  album.cxx  camera.cxx  config.h.in  configure  configure.in  debug.h  directory.cxx  (+37 more)
flphoto_mod1/.xvpics/.svn/: entries
flphoto_mod1/doc/: about.html  album.man  albums.html  contents.html  download.html  export.html  flphoto.man  images.html  options.html  print.html  view.html
flphoto_mod1/doc/.svn/: entries
flphoto_mod1/doc/.svn/text-base/: crop.jpg.svn-base  export-general.jpg.svn-base  export-thumbnails.jpg.svn-base  export-watermark.jpg.svn-base  fldcraw.man.svn-base  flphoto.jpg.svn-base  import.html.svn-base  index.html.svn-base  jpeg.jpg.svn-base  license.html.svn-base  options-image.jpg.svn-base  options-slideshow.jpg.svn-base  print-general.jpg.svn-base  print-matted.jpg.svn-base  relnotes.html.svn-base  slideshow.html.svn-base
flphoto_mod1/icons/: pencil.xpm  print_1up.xpm  print_index.xpm  print_mat.xpm  print_portrait.xpm  zoom_in.xpm  zoom_out.xpm
flphoto_mod1/icons/.svn/: entries
flphoto_mod1/icons/.svn/text-base/: pan.xpm.svn-base  print_2up.xpm.svn-base  print_4up.xpm.svn-base  print_cal.xpm.svn-base  redeye.xpm.svn-base
flphoto_mod1/po/: de.po  en_GB.po  fr.po  nl.po
flphoto_mod1/po/.svn/: entries
flphoto_mod1/po/.svn/text-base/: de.svn-base  en_CA.svn-base  es.po.svn-base  es.svn-base  flphoto.pot.svn-base  fr.svn-base  it.po.svn-base  it.svn-base  nl.svn-base  pt.po.svn-base  pt.svn-base  sv.po.svn-base  sv.svn-base
flphoto_mod1/visualc/: espmsg.dsp  flphoto.dsp  flphoto.rc  resource.h
flphoto_mod1/visualc/.svn/: entries
flphoto_mod1/visualc/.svn/text-base/: config.h.svn-base  flphoto.dsw.svn-base  flphoto.ico.svn-base  flphoto.sln.svn-base  flphoto.suo.svn-base  flphoto.wip.svn-base
(+14 files in other folders)
